<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.10">
  <POU Name="Robot_Start_Job" Id="{8786bda5-388f-423d-aa27-4f147888d53f}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION Robot_Start_Job : Robot_Error
VAR_INPUT
	JobID : UDINT;
END_VAR
VAR_IN_OUT
	Robot : UR3e_Robot;
END_VAR
VAR
	bitArray : BitStruct_Byte;
	IntArray : INT_ByteArray;
	i : UINT;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[Robot_Start_Job := Robot_Chek_errors(Robot:= Robot);

IF Robot_Start_Job = Robot_Error.None AND (NOT((Robot.GPR_BIT[0] AND 2#00000001) = 2#00000001)) THEN
	
	// zet job is in int0
	IntArray.Value := JobID;
	FOR i := 0 TO 3 BY 1 DO
		Robot.GPR1[4+i] := IntArray.AValue[3-i];
	END_FOR
	
	// zet bool0 true
	bitArray.Value := Robot.GPR1[0];
	bitArray.SValue.Bit0 := TRUE;
	Robot.GPR1[0] := bitArray.Value;
END_IF]]></ST>
    </Implementation>
    <LineIds Name="Robot_Start_Job">
      <LineId Id="7" Count="0" />
      <LineId Id="18" Count="0" />
      <LineId Id="17" Count="0" />
      <LineId Id="30" Count="1" />
      <LineId Id="25" Count="1" />
      <LineId Id="28" Count="1" />
      <LineId Id="32" Count="1" />
      <LineId Id="22" Count="1" />
      <LineId Id="19" Count="1" />
    </LineIds>
  </POU>
</TcPlcObject>